--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 # Site settings
+title: 74 Mademoiselle
 description: > # this means to ignore newlines until "baseurl:"
 # baseurl: "" # the subpath of your site, e.g. /blog/
 # url: "74mademoiselle.fr" # the base hostname & protocol for your site
