--- a/_data/global.yaml
+++ b/_data/global.yaml
@@ -1,4 +1,5 @@
 ---
 title: Résidence Ella
 email: contact@residence-ella.com
-phone: 06 79 33 01 54
+phone: 06 95 59 97 42
+comeeting_phone: 06 79 33 01 54
